fix: adjust heading font sizes and line heights for improved readability

--- a/garage/blog/src/styles/global.css
+++ b/garage/blog/src/styles/global.css
@@ -56,8 +56,23 @@ h3,
 h4,
 h5,
 h6 {
+  line-height: 1.2;
 }
-
+h1 {
+	font-size: 3.052em;
+}
+h2 {
+	font-size: 2.441em;
+}
+h3 {
+	font-size: 1.953em;
+}
+h4 {
+	font-size: 1.563em;
+}
+h5 {
+	font-size: 1.25em;
+}
 .prose p {
   margin-bottom: 2em;
 }
